--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "assignment1final",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines":{
+    "node":"^12.18.3",
+    "npm":"^6.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.0",
@@ -16,5 +20,20 @@
     "jquery": "^3.5.1",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "Assignment1FINAL",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/franzcad1/Assignment1FINAL.git"
+  },
+  "author": "Franz Cadiente",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/franzcad1/Assignment1FINAL/issues"
+  },
+  "homepage": "https://github.com/franzcad1/Assignment1FINAL#readme"
 }
+
+
